# MTRN4231_Winners

./: .gitignore  Launcher v10.f3d  RUN.md
Arduino/: Arduino.ino
Ball Traje/: Ball.py  Kalman.py
CameraCV_pkg/: setup.cfg  setup.py
CameraCV_pkg/CameraCV_pkg/: dist.npy  opencv_test.py
CameraCV_pkg/CameraCV_pkg/calibration_data/: mtx.npy  rvecs.npy  tvecs.npy
Kalman filter/: Ball.py  Traj.py  TriKalman.py  orange_prediction.py
StepperTest/: StepperTest.ino
balldetect/: package.xml  setup.cfg  setup.py
balldetect/balldetect/: backup.py  backup_point_cloud.py  ball_detector.py  target_detector.py
dual_camera/: CMakeLists.txt  package.xml
launch/: winners_launch.py
ros_ur_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ur_driver/install/ur/share/ament_index/resource_index/parent_prefix_path/: ur
ros_ur_driver/install/ur/share/ur/: local_setup.sh  package.sh
ros_ur_driver/install/ur/share/ur/cmake/: urConfig.cmake
ros_ur_driver/install/ur_bringup/share/ur_bringup/: local_setup.sh  package.sh
ros_ur_driver/install/ur_bringup/share/ur_bringup/cmake/: ur_bringupConfig-version.cmake  ur_bringupConfig.cmake
ros_ur_driver/install/ur_calibration/share/ament_index/resource_index/parent_prefix_path/: ur_calibration
ros_ur_driver/install/ur_calibration/share/ur_calibration/: local_setup.sh  package.sh
ros_ur_driver/install/ur_calibration/share/ur_calibration/cmake/: ur_calibrationConfig.cmake
ros_ur_driver/install/ur_controllers/include/gpio_controller_parameters/: gpio_controller_parameters.hpp
ros_ur_driver/install/ur_controllers/include/scaled_joint_trajectory_controller_parameters/: scaled_joint_trajectory_controller_parameters.hpp
ros_ur_driver/install/ur_controllers/include/speed_scaling_state_broadcaster_parameters/: speed_scaling_state_broadcaster_parameters.hpp
ros_ur_driver/install/ur_controllers/share/ament_index/resource_index/parent_prefix_path/: ur_controllers
ros_ur_driver/install/ur_controllers/share/ur_controllers/: local_setup.sh  package.sh
ros_ur_driver/install/ur_controllers/share/ur_controllers/cmake/: ur_controllersConfig.cmake
ros_ur_driver/install/ur_dashboard_msgs/share/ament_index/resource_index/parent_prefix_path/: ur_dashboard_msgs
ros_ur_driver/install/ur_dashboard_msgs/share/ur_dashboard_msgs/: local_setup.sh  package.sh
ros_ur_driver/install/ur_dashboard_msgs/share/ur_dashboard_msgs/cmake/: ur_dashboard_msgsConfig.cmake
ros_ur_driver/install/ur_moveit_config/share/ur_moveit_config/: local_setup.sh  package.sh
ros_ur_driver/install/ur_moveit_config/share/ur_moveit_config/cmake/: ur_moveit_configConfig.cmake
ros_ur_driver/install/ur_moveit_config/share/ur_moveit_config/config/: ompl_planning.yaml
ros_ur_driver/install/ur_robot_driver/share/ament_index/resource_index/parent_prefix_path/: ur_robot_driver
ros_ur_driver/install/ur_robot_driver/share/ur_robot_driver/: local_setup.sh  package.sh
ros_ur_driver/install/ur_robot_driver/share/ur_robot_driver/cmake/: ur_robot_driverConfig.cmake
ros_ur_driver/log/: latest_build
src/CameraCV_pkg/: package.xml
src/CameraCV_pkg/CameraCV_pkg/: opencv_test.py
src/CameraVC/: package.xml  setup.cfg  setup.py
src/camera_pkg/: package.xml  setup.py
src/camera_pkg/camera_pkg/: test.py
src/install/: local_setup.sh  setup.sh
src/install/CameraCV_pkg/share/CameraCV_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/winners_pkg/share/winners_pkg/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
src/install/winners_pkg/share/winners_pkg/launch/: winners_launch.py
src/log/: latest_build
src/winners_pkg/: CMakeLists.txt  package.xml
src/winners_pkg/include/: Brain.hpp
src/winners_pkg/src/: RobotControl.cpp  camTest.cpp  velcroPadPose.cpp
util_arduino_serial/: README.md  package.xml  setup.cfg  setup.py
util_arduino_serial/util_arduino_serial/: util_arduino_serial.py
winners_pkg/: CMakeLists.txt  package.xml  setup.py
winners_pkg/config/: joint_limits.yaml
winners_pkg/include/: Brain.hpp  Camera.hpp  Helpers.hpp  RobotControl.hpp  TrajectoryCalculator.hpp  Transforms.hpp  Visualisations.hpp
winners_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
winners_pkg/install/winners_pkg/share/ament_index/resource_index/package_run_dependencies/: winners_pkg
winners_pkg/install/winners_pkg/share/ament_index/resource_index/parent_prefix_path/: winners_pkg
winners_pkg/install/winners_pkg/share/winners_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
winners_pkg/install/winners_pkg/share/winners_pkg/cmake/: winners_pkgConfig.cmake
winners_pkg/install/winners_pkg/share/winners_pkg/launch/: winners_launch.py
winners_pkg/launch/: TestLaunch.py  pred_launch.py  winners_launch.py
winners_pkg/log/: latest_build  latest_list
winners_pkg/scripts/: BallPose.py  Control.py  Trajectory.py  TriKalman.py
winners_pkg/src/: BallPose.cpp  Brain.cpp  Camera.cpp  RobotControl.cpp  TrajectoryCalculator.cpp  Transforms.cpp  Visualisations.cpp  ballPose.cpp  camTest.cpp  dual_cam_test.cpp  dual_camera_test.py  transforms.cpp  velcroPadPose.cpp
ws_moveit2/log/: latest_build
